--- a/mitm/pf.conf
+++ b/mitm/pf.conf
@@ -1,8 +1,11 @@
-nat-anchor "com.apple.internet-sharing"
-rdr-anchor "com.apple.internet-sharing"
+#nat-anchor "com.apple.internet-sharing"
+#rdr-anchor "com.apple.internet-sharing"
 
 if_wifi="en0"
 if_bridge="bridge100"
 if_lan="en8"
 local="lo0"
 protocol="{tcp, udp}"
+
+nat on en8 from bridge100 -> (en8)
+nat on en8 from 192.168.3.5 -> (en8)
