working for burp and mitmproxy -T —host

--- a/mitm/pf.conf
+++ b/mitm/pf.conf
@@ -7,5 +7,9 @@ if_lan="en8"
 local="lo0"
 protocol="{tcp, udp}"
 
+
 nat on en8 from bridge100 -> (en8)
 nat on en8 from 192.168.3.5 -> (en8)
+
+rdr pass on bridge100 inet proto {tcp, udp} from any to any -> 127.0.0.1 port 8080
+rdr pass on 192.168.3.5 inet proto {tcp, udp} from any to any -> 127.0.0.1 port 8080
